<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.fooddeliverytestapp.ui.fragments.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fooddeliverytestapp.ui.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fooddeliverytestapp.ui.fragments.ShoppingCartFragment"
        android:label="@string/title_shoppingCart"
        tools:layout="@layout/fragment_shopping_cart" />
</navigation>